fix z-index bug AND fix product toolbar sticky

--- a/less/_navbar.less
+++ b/less/_navbar.less
@@ -9,7 +9,7 @@
 		top: 108px;
 		width: 100%;
 
-	    z-index: 1;
+	    z-index: 9;
 	}
 }
 
