--- a/less/_productBar.less
+++ b/less/_productBar.less
@@ -51,5 +51,9 @@
 		}
 	}
 
+}
 
+.sticky {
+	position: fixed;
+	top: 0;
 }
